# wizcoin

./: README.md  code_of_conduct.md  pyproject.toml  setup.py
src/wizcoin/: __init__.py
